# Irish_embassies_web

./: app.py  pyproject.toml
modules/: map.py
queries/: get.py
